Demo Selika/force-app/main/default/objects/Lead/fields/Score1__c.field-meta.xml
<CustomField>
    <fullName>Score1__c</fullName>
    <formula>IF ( SDO_Sales_Know_Decision_Maker__c ,5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Maker Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>