Demo Selika/force-app/main/default/objects/Lead/fields/Score2__c.field-meta.xml
<CustomField>
    <fullName>Score2__c</fullName>
    <formula>CASE(SDO_Sales_Decision_Timeframe__c  ,"Immediately", 5, "1-3 Months",4,"3-6 Months", 3, "6-12 Months", 2, "Next Year", 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Timeframe Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>