Demo Selika/force-app/main/default/objects/Lead/fields/SDO_Experience_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Approval_Status__c</fullName>
    <description>Used to track approval status for leads in sales process and partner registration processes</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>