Demo Selika/force-app/main/default/objects/Lead/fields/SDO_PRM_Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>SDO_PRM_Service_Delivery__c</fullName>
    <description>Used in deal registration process to denote which type of service delivery it is</description>
    <label>Service Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>IT Solutions</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>