Demo Selika/force-app/main/default/objects/Lead/fields/SDO_Sales_Know_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Know_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>What; Decision Maker Field</description>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>