Demo Selika/force-app/main/default/objects/Lead/fields/SDO_Sales_Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Lead_Quality__c</fullName>
    <formula>IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (SDO_Sales_Lead_Total__c &gt; 0, '015KY000001D0CA', '015KY000001D0CB'),'',24,22) &amp;""&amp;
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (SDO_Sales_Lead_Total__c &gt; 5, '015KY000001D0CA', '015KY000001D0CB'),'',24,22) &amp;""&amp;
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (SDO_Sales_Lead_Total__c &gt; 10, '015KY000001D0CA', '015KY000001D0CB'),'',24,22) &amp;""&amp;
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (SDO_Sales_Lead_Total__c &gt; 15, '015KY000001D0CA', '015KY000001D0CB'),'',24,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>