Demo Selika/force-app/main/default/objects/Lead/fields/SDO_Sales_Lead_Total__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Lead_Total__c</fullName>
    <description>What: Formula to calculate total score from score fields.</description>
    <formula>Score1__c + Score2__c  +Score3__c + Score4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>