Demo Selika/force-app/main/default/objects/Lead/fields/Services_Interest__c.field-meta.xml
<CustomField>
    <fullName>Services_Interest__c</fullName>
    <label>Servicios de Interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gastroenterología</fullName>
            </value>
            <value>
                <fullName>Colonoscopia</fullName>
            </value>
            <value>
                <fullName>Chequeo Ejecutivo</fullName>
            </value>
            <value>
                <fullName>Turismo Médico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>