Demo Selika/force-app/main/default/objects/Lead/fields/Shadow_Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Roof_Type__c</fullName>
    <description>Used by the Einstein Vision Demo updated Jan 2020.</description>
    <inlineHelpText>Determines which image shows when you click the "Analyze Roof Type" button.  These are called "RooftopFlat" and "RooftopPitched" inside the static resource "EinsteinVisionRooftopImages".</inlineHelpText>
    <label>Shadow Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>