Demo Selika/force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IMAGE(
  CASE(
    LeadSource,
    "Website", "https://sdo-master.s3.us-west-1.amazonaws.com/icons/website.png",
    "Social Media", "https://sdo-master.s3.us-west-1.amazonaws.com/icons/social.png",
    "Marketing Event", "https://sdo-master.s3.us-west-1.amazonaws.com/icons/marketing.png",
    "Referral", "https://sdo-master.s3.us-west-1.amazonaws.com/icons/referral.png",
    "Cold Call", "https://sdo-master.s3.us-west-1.amazonaws.com/icons/coldcall.png",
    "Community", "https://sdo-master.s3.us-west-1.amazonaws.com/icons/community.png",
    "Inbound Call", "https://sdo-master.s3.us-west-1.amazonaws.com/icons/inboundcall.png",
    "Partner", "https://sdo-master.s3.us-west-1.amazonaws.com/icons/partner.png",
    "https://sdo-master.s3.us-west-1.amazonaws.com/icons/website.png"
  ),
  "", 22, 22
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>