Demo Selika/force-app/main/default/objects/Lead/fields/URLsrc__c.field-meta.xml
<CustomField>
    <fullName>URLsrc__c</fullName>
    <description>This field is to ensure that icons show up properly in Communities.</description>
    <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,".force.com"),
MID( $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)),
FIND("/", $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))+1) - FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))
) , "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URLsrc</label>
    <type>Text</type>
</CustomField>