Demo Selika/force-app/main/default/objects/Lead/fields/vlocity_ins__BirthDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BirthDate__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>