Demo Selika/force-app/main/default/objects/Lead/fields/vlocity_ins__ReferredByContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReferredByContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the contact who referred this lead.</description>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Referred By)</relationshipLabel>
    <relationshipName>ReferredLeads</relationshipName>
    <type>Lookup</type>
</CustomField>