Demo Selika/force-app/main/default/objects/Lead/fields/WhatsApp_Lead__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origen WhatsApp</label>
    <type>Checkbox</type>
</CustomField>