Demo Selika/force-app/main/default/objects/Lead/recordTypes/Lead_Partner_Application.recordType-meta.xml
<RecordType>
    <fullName>Lead_Partner_Application</fullName>
    <active>true</active>
    <businessProcess>Partner Recruitment</businessProcess>
    <description>Used when a potential partner applies to the partner program.</description>
    <label>Lead - Partner Application</label>
</RecordType>