Demo Selika/force-app/main/default/objects/Lead/listViews/SDO_Sales_General_Lead_Lead.listView-meta.xml
<ListView>
    <fullName>SDO_Sales_General_Lead_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales -  Lead</label>
    <queue>SDO_Sales_General_Lead</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>