Demo Selika/force-app/main/default/objects/Lead/listViews/SDO_Sales_West_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>SDO_Sales_West_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales - Leads West</label>
    <queue>SDO_Sales_West_Leads</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>